--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,24 @@
 <!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+ <html>
+    <head>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="./styles.css">
+    </head>
+    <body>
+        <div class=" container">
+            <div class="row">
+                <div class="col-8">
+                <h1>This First Heading <span style="color:grey;">Will Catch Your Eye</span></h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p> 
+                </div>
+                <div class="col-4">
+                    <img src="https://th.bing.com/th/id/OIP.scGurhXmigprnv08zXKWpQHaHa?pid=ImgDet&w=184&h=184&c=7&dpr=1.3" class="img-fluid rounded-circle">
+                </div>
+            </div>
+
+            
+
+        </div>
+        
+    </body>
+ </html>
