--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,10 @@
 <!-- your html code here -->
+
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
-<p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
+<div class="jumbotron text-center" style="background-image: url('https://cdn.pixabay.com/photo/2021/07/28/12/06/buildings-6499684_640.jpg'); background-size: cover; background-position: center; height: 300px; padding-top: 60px; padding-bottom: 100px;">
+ <div class="container">
+      <div style="background-color: white;"><h1 class="display-4" style= "font-size: 3.5rem;">One Page Wonder</h1></div>
+      <div style="background-color: white;"><h2 class="lead" style= "font-size: 2rem;" >Will Knock Your Socks Off</h2></div>
+
+    </div>
+</div>
