--- a/website/templates/portfolio.html
+++ b/website/templates/portfolio.html
@@ -1,2 +1,67 @@
-<!-- your html code here -->
-<p>Hello, I'm the portfolio.html</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One Page Wonder</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+</head>
+
+<body>
+    <div class="container">
+        <div>
+            <h3>Portfolio</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorum laboriosam molestias? Laborum
+                similique temporibus ex? Veniam saepe quidem excepturi fugit recusandae tempora! Minus eveniet dolorum
+                exercitationem officia dicta mollitia?</p>
+        </div>
+        <div class="row justify-content">
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://picsum.photos/id/237/700/400" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-primary">Project Name</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://picsum.photos/id/237/700/400" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-primary">Project Name</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="https://picsum.photos/id/237/700/400" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-primary">Project Name</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
